force-app/main/default/objects/Vehicle__c/fields/Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Quantity__c</fullName>
    <label>Available Quantity</label>
    <type>Number</type>
    <formula>Vehicle_Quantity__c - Booked_Quantity__c</formula>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>