force-app/main/default/objects/Vehicle__c/fields/Available_Stock__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock__c</fullName>
    <label>Available Stock</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <formula>Incoming_Quantity__c - Booked_Quantity__c</formula>
</CustomField>