force-app/main/default/objects/Vehicle__c/fields/Booked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Booked_Quantity__c</fullName>
    <label>Booked Quantity</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <description>Vehicles currently reserved by customers</description>
</CustomField>