force-app/main/default/objects/Vehicle__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>Engine CC</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>