force-app/main/default/objects/Vehicle__c/fields/Ground_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Ground_Clearance__c</fullName>
    <label>Ground Clearance (mm)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>