force-app/main/default/objects/Vehicle__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <label>Model Year</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>