force-app/main/default/objects/Vehicle__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>