force-app/main/default/objects/Vehicle__c/fields/Vehicle_Brand__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand__c</fullName>
    <label>Brand</label>
    <type>Lookup</type>
    <referenceTo>Brand__c</referenceTo>
    <relationshipName>Vehicle_Brand</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>