force-app/main/default/objects/Vehicle__c/fields/Vehicle_Category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Category__c</fullName>
    <label>Category</label>
    <type>Lookup</type>
    <referenceTo>Category__c</referenceTo>
    <relationshipName>Vehicle_Categories</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>