force-app/main/default/objects/Vehicle__c/fields/Vehicle_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Quantity__c</fullName>
    <label>Total Vehicles</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Total vehicles in inventory</description>
</CustomField>