force-app/main/default/objects/Vehicle__c/listViews/VehiclesList.listView-meta.xml
<ListView>
    <fullName>VehiclesList</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_Quantity__c</columns>
    <columns>Booked_Quantity__c</columns>
    <columns>Available_Quantity__c</columns>
    <columns>Vehicle_Category__c</columns>
    <columns>Vehicle_Brand__c</columns>
    <columns>Model_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Vehicles</label>
</ListView>